Fixed "session sauvegardées" too large on left

--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -103,7 +103,7 @@ select, button, input[type=submit] {
 }
 
 #slideout_text {
-    font-size: 9pt;
+    font-size: 9pt !important;
 }
 
 .top_buttons img {
